fix(server): improve label matching and code clarity in HugeAuthenticator
1. Introduced a safe wildcard-based label matching method to prevent ReDoS attacks, replacing direct regex usage.

2. Refactored code for better readability, reordered admin checks, and made minor comment and formatting improvements throughout HugeAuthenticator.java.

3. Enhance zip extraction security with path validation